manifest/micm/acapy-agency/overlays/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acapy-agency-deployment
  labels:
    app: acapy-agency
spec:
  selector:
    matchLabels:
      app: acapy-agency
  # RollingUpdate 설정
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: acapy-agency
    spec:
      # indy-node, acapy-agency 전용 serviceAccount 지정
      serviceAccount: indy
      # securityContext '1001' 지정 필요 : 미지정시 Pod 실행 중 permission error 발생
      securityContext:
        # User 'indy' : uid=1001(indy) gid=1001(indy) groups=1001(indy)
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup : 1001
      volumes:
        # etcacapy
        - name: etcacapy
          configMap:
            name: acapy-agency-file-configmap
            items:
              - key: logging.ini
                path: logging.ini
        # logs
        - name: acapy-agency-logs-volume
          persistentVolumeClaim:
            claimName: dmicma-logs-volume-claim
        # Script
        - name: acapy-agency-script-volume
          configMap:
            name: acapy-agency-script
            # mount 시 'root:root' 로 지정됨 : 일반 계정으로 script 실행 가능하도록 0777 로 지정 
            defaultMode: 0777

      ### terminationGracePeriodSeconds : pod 종료시 timeout
      ### lifecycle.preStop 보다 우선순위 높음 : 45초 설정 ( default : 30초 )
      terminationGracePeriodSeconds: 45
      containers:
        - name: acapy-agency-container
          image: harbor-core.lguplus-registry.svc.cluster.local/micm-dev/uplus-acapy
          imagePullPolicy: Always
          volumeMounts:
            # etcacapy
            - name: etcacapy
              mountPath: /etc/acapy
            # logs
            - name: acapy-agency-logs-volume
              # 환경변수 ACAPY_LOG_FILE 의 파일명 제외한 경로로 지정
              # @see configmap.yaml
              mountPath: /home/indy/logs
              subPathExpr: acapy-agency

            ### Pod 내 '/script' 경로에 configmap 지정 script 들을 일괄 mount
            - name: acapy-agency-script-volume
              mountPath: /script

          ### startupProbe : 해당 Pod 내 컨테이너의 application 이 시작되었는지 확인
          ### startupProbe OK 전까지는 readinessProbe/livenessProbe 호출하지 않음
          startupProbe:
            httpGet:
              path: /status/ready
              port: admin-api
            initialDelaySeconds: 20   # pod 최초 생성 후 대기시간 ( Defaults: 0 )
            periodSeconds: 5          # probe 호출 주기 ( Defaults: 10 )
            timeoutSeconds: 3         # probe 호출시 timeout ( Defaults: 1 )
            failureThreshold: 5       # probe 가 실패할 수 있는 횟수 ( Defaults: 3 )
          ### readinessProbe : 해당 Pod 가 traffic 을 받을 준비가 되어있는지 확인
          ### 진단에 실패하면 엔드포인트(Endpoint) 컨트롤러는 해당 Pod 의 IP 를 endpoint 에서 제거
          readinessProbe:
            httpGet:
              path: /status/ready
              port: admin-api
            initialDelaySeconds: 20    # startupProbe.initialDelaySeconds 와 동일하게 적용
            periodSeconds: 30          # probe 호출 주기
            timeoutSeconds: 3          # probe 호출시 timeout
            failureThreshold: 5        # probe 가 실패할 수 있는 횟수 ( Defaults: 3 )
          ### livenessProbe : 해당 Pod 가 가동 중인지 (alive) 확인
          ### Probe 호출 실패 횟수가 failureThreshold 초과시 Pod Restart 
          livenessProbe:
            httpGet:
              path: /status/live
              port: admin-api
            initialDelaySeconds: 20   # startupProbe.initialDelaySeconds 와 동일하게 적용
            periodSeconds: 30         # probe 호출 주기
            timeoutSeconds: 3         # probe 호출시 timeout
            failureThreshold: 5       # probe 가 실패할 수 있는 횟수 ( Defaults: 3 )
          command: ["/script/entrypoint.sh"]
          # command: ["aca-py"]
          args:
            - aca-py
            - start
            - --admin
            - 0.0.0.0
            - "8080"
            - --inbound-transport
            - http
            - 0.0.0.0
            - "8000"
            - --outbound-transport
            - http
          resources:
            limits:
              memory: "512Mi"
              cpu: "0.5"
            requests:
              memory: "512Mi"
              cpu: "0.5"
