manifest/micm/acapy-agency/overlays/dev/service-dev.yaml
##############################
# NodePort Service
##############################
apiVersion: v1
kind: Service
metadata:
  labels:
    app: acapy-agency
  name: acapy-agency-client-service-nodeport
spec:
  externalTrafficPolicy: Cluster
  type: NodePort
  ports:
    - port: 8000
      targetPort: inbound
      nodePort: 30006   # [ 개발 환경 ] 외부 Mobile SDK traffic 접속용 Nodeport 번호
      protocol: TCP
  selector:
    app: acapy-agency
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: acapy-agency
  name: acapy-agency-admin-service-nodeport
spec:
  externalTrafficPolicy: Cluster
  type: NodePort
  ports:
    - port: 8080
      targetPort: admin-api
      nodePort: 30011   # [ 개발 환경 ] Swagger 접속용 Nodeport 번호
      protocol: TCP
  selector:
    app: acapy-agency
---
##############################
# ExternalName Service
##############################
### [ 개발 ]  Acapy Agency 전용 PostgreSQL 접속 ExternalName Service
apiVersion: v1
kind: Service
metadata:
  name: acapy-agency-service-external-acapy-postgresql
spec:
  type: ExternalName
  externalName: solution-postgresql-hl.dmicma.svc.cluster.local
